# pufferpantry

./: .gitignore  pyproject.toml
app/: config.py  database.py  main.py
app/models/: pantry.py  recipe.py  storage.py
app/routers/: pantry.py  recipes.py  storage.py
app/schemas/: pantry.py  recipe.py  storage.py
app/services/: nutrition_service.py  pantry_service.py  photo_service.py  recipe_service.py  shopping_service.py  storage_service.py  url_service.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
frontend/js/components/: pantry-form.js  pantry-list.js  pantry-scan.js  photo-upload.js  recipe-card.js  recipe-detail.js  recipe-form.js  shopping-list.js  storage-setup.js  url-import.js
tests/: conftest.py  test_photo_extraction.py  test_recipes.py
